--- a/web/templates/images.html
+++ b/web/templates/images.html
@@ -1,5 +1,16 @@
-{{range .}}
-<div>
-  <img src="{{.URL}}" alt="{{.Alt}}" class="w-full h-auto rounded shadow" />
-</div>
+{{range $i, $a := .Images}}
+  {{- $isLast := eq $i $.LastIndex -}}
+  {{- $imgClass := "h-96 w-full object-cover rounded shadow" -}}
+  {{- $overlayClass := "absolute h-full w-full bg-black/70 flex items-center justify-center -bottom-10 group-hover:bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-300 text-white" -}}
+
+  <a href="/watertower?id={{$a.ID}}" {{if $isLast}}hx-get="/images?page={{$.NextPage}}" hx-trigger="revealed" hx-swap="afterend"{{end}}>
+    <div class="group">
+      <div class="relative overflow-hidden">
+        <img class="{{$imgClass}}" src="{{$a.URL}}" alt="{{$a.Alt}}" />
+        <div class="{{$overlayClass}}">
+          {{$a.Location}}
+        </div>
+      </div>
+    </div>
+  </a>
 {{end}}
