--- a/web/templates/watertower.html
+++ b/web/templates/watertower.html
@@ -50,18 +50,23 @@
           </div>
         </div>
       </nav>
-
       <main>
         <div class="mx-auto max-w-7xl px-4 lg:px-8">
           <div class="container mx-auto p-4">
-            <div
-              id="image-grid"
-              class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-4"
-              hx-get="/images?page=0"
-              hx-trigger="load"
-              hx-swap="innerHTML"
-            ></div>
+            <div class="grid grid-cols-2 gap-4">
+              <div>
+                <img
+                  class="rounded"
+                  src="{{.Image.URL}}"
+                  alt="{{.Image.Alt}}"
+                />
+              </div>
+              <div>
+                <h2 class="text-4xl font-extrabold">{{.Image.Location}}</h2>
+              </div>
+            </div>
           </div>
+          {{template "review" .}}
         </div>
       </main>
     </div>
