--- a/web/templates/watertower.html
+++ b/web/templates/watertower.html
@@ -66,7 +66,7 @@
               </div>
             </div>
           </div>
-          {{template "review" .}}
+          <div hx-get="/review" hx-trigger="load" hx-swap="innerHTML">Test</div>
         </div>
       </main>
     </div>
